# P2P_Document_sharing

./: README.md  pyproject.toml
backend/: .env  config.py  database.py  run.py
backend/api/: auth.py  document.py
backend/models/: basemodel.py  document.py  user.py
backend/models/schemas/: auth.py  custom_oauth_bearer.py  document.py
backend/persistence/: repository.py
backend/service/: __init__.py  facade.py
backend/uploads/: 1699f19b-01b1-42e1-929e-8854b804f107_MySql  de728dc4-b27a-4a14-ba26-0859a0ec2863_jtxo stka lkxv xtbw.txt
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/list/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: auth-provider.tsx  protected-route.tsx
frontend/lib/: axios.ts  utils.ts
